--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Mercadolibre" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Mercadolibre" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,23 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="OutlinedTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:textColorHint">@color/cardview_dark_background</item>
+        <item name="hintTextColor">@color/cardview_dark_background</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/spacing_8</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/spacing_8</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/spacing_8</item>
+        <item name="boxCornerRadiusTopStart">@dimen/spacing_8</item>
+        <item name="errorEnabled">true</item>
+    </style>
+
+    <style name="RoundedTextInputEditTextSelector" parent="Widget.AppCompat.EditText">
+        <item name="android:textSize">@dimen/font_size_18</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/cardview_dark_background</item>
+        <item name="android:background">@drawable/text_input_edit_text_selector</item>
+        <item name="errorEnabled">true</item>
     </style>
 </resources>
